--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,23 @@ permissions:
 
 
 jobs:
+  changes:
+    runs-on: ubuntu-latest
+    timeout-minutes: 1
+    defaults:
+      run:
+        shell: bash
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4.1.7
+      - id: changes
+        name: Check for file changes
+        uses: dorny/paths-filter@0bc4621a3135347011ad047f9ecf449bf72ce2bd # v3.0.0
+        with:
+          base: ${{ github.ref }}
+          token: ${{ github.token }}
+          filters: .github/file-filters.yml
+
   ci:
     runs-on: ubuntu-latest
     timeout-minutes: 1
@@ -27,11 +44,10 @@ jobs:
         shell: bash
     strategy:
       matrix:
-#        python-version: ["3.9", "3.11", "3.12"]
-#        django-version: ["3", "4"]
-        python-version: ["3.11"]
-        django-version: ["3", ]
-
+        python-version: [ "3.9", "3.11", "3.12" ]
+        django-version: [ "3", "4" ]
+    needs: [ changes ]
+    if: needs.changes.outputs.run_tests || contains(github.event.head_commit.message, 'ci:release')
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.1.7
@@ -40,16 +56,7 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: 'x64'
-
-      #      - id: changes
-#        name: Check for file changes
-#        uses: dorny/paths-filter@0bc4621a3135347011ad047f9ecf449bf72ce2bd # v3.0.0
-#        with:
-#          base: ${{ github.ref }}
-#          token: ${{ github.token }}
-#          filters: .github/file-filters.yml
       - name: Test
-#        if: needs.changes.outputs.run_tests || contains(github.event.head_commit.message, 'ci:release')
         run: |
           pip install pdm
           pdm venv create
