--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "django-regex-field>=3.1.0",
     "django-admin-extra-buttons>=1.5.8",
     "django-jsoneditor>=0.2.4",
+    "djangorestframework>=3.15.1",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
@@ -70,6 +71,7 @@ dev = [
     "pytest-cov>=5.0.0",
     "django-webtest>=1.9.11",
     "responses>=0.25.3",
+    "django-csp>=3.8",
 ]
 
 [tool.pdm.scripts]
