--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "django-admin-extra-buttons>=1.5.8",
     "django-jsoneditor>=0.2.4",
     "djangorestframework>=3.15.1",
+    "mini-racer>=0.12.4",
+    "jsonpickle>=3.2.2",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
