--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -88,7 +88,7 @@ jobs:
       - name: Test
         if: needs.changes.outputs.run_tests
         run: |
-          pdm run pytest tests --junit-xml junit-${{ matrix.python-version }}-${{matrix.django-version}}.xml
+          pdm run pytest tests --create-db --junit-xml junit-${{ matrix.python-version }}-${{matrix.django-version}}.xml
 
       - name: Upload pytest test results
         uses: actions/upload-artifact@v4
