--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ dependencies = [
     "djangorestframework>=3.15.1",
     "mini-racer>=0.12.4",
     "jsonpickle>=3.2.2",
+    "xlsxwriter>=3.2.0",
+    "django-adminactions>=2.3.0",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
