--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ dependencies = [
     "jsonpickle>=3.2.2",
     "xlsxwriter>=3.2.0",
     "django-adminactions>=2.3.0",
+    "duckdb>=1.0.0",
+    "python-calamine>=0.2.0",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
