--- a/tests/.coveragerc
+++ b/tests/.coveragerc
@@ -24,6 +24,7 @@ exclude_lines =
     if DEBUG:
     except NoReverseMatch:
     if TYPE_CHECKING:
+    raise ValueError(...)
 
 ignore_errors = True
 
