--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,3 +23,7 @@ repos:
     hooks:
       - id: bandit
         args: ["-c", "bandit.yaml"]
+  - repo: https://github.com/saxix/pch
+    rev: '0.1'
+    hooks:
+      - id: check-missed-migrations
