--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "hope-flex-fields"
-version = "0.1.0"
+version = "0.1.0rc"
 description = ""
 authors = [
     {name = "sax", email = "s.apostolico@gmail.com"},
