--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = d{50}
+envlist = d{32,42,50}
 envtmpdir={toxinidir}/build/{envname}/tmp
 envlogdir={toxinidir}/build/{envname}/log
 
@@ -21,6 +21,8 @@ setenv =
 extras =
     test
 deps =
+     d32: django==3.2.*
+     d42: django==4.2.*
      d50: django==5.0.*
 
 allowlist_externals =
