--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,11 @@ description = ""
 authors = [
     {name = "sax", email = "s.apostolico@gmail.com"},
 ]
+
+requires-python = ">=3.11"
+readme = "README.md"
+license = {text = "MIT"}
+
 dependencies = [
     "django-strategy-field>=3.1.0",
     "django-regex>=0.5.0",
@@ -23,9 +28,35 @@ dependencies = [
     "jmespath>=1.0.1",
     "deepdiff>=8.0.1",
 ]
-requires-python = ">=3.11"
-readme = "README.md"
-license = {text = "MIT"}
+[project.optional-dependencies]
+docs = [
+    "mkdocs>=1.6.1",
+    "mkdocs-material>=9.5.36",
+    "mkdocs-awesome-pages-plugin>=2.9.3",
+    "mkdocstrings-python",
+]
+
+[tool.uv]
+dev-dependencies = [
+    "bandit>=1.7.9",
+    "black>=24.4.2",
+    "django-csp>=3.8",
+    "django-factory-boy>=1.0.0",
+    "django-webtest>=1.9.11",
+    "django>=3",
+    "flake8-html>=0.4.3",
+    "flake8>=7.1.0",
+    "freezegun>=1.5.1",
+    "isort>=5.13.2",
+    "mypy>=1.10.1",
+    "pdbpp>=0.10.3",
+    "pre-commit>=3.7.1",
+    "pytest-cov>=5.0.0",
+    "pytest-django>=4.8.0",
+    "pytest>=8.2.2",
+    "responses>=0.25.3",
+    "tox>=4.16.0",
+]
 
 
 [build-system]
@@ -61,33 +92,3 @@ skip = ["migrations", "snapshots", ".venv"]
 
 [tool.django-stubs]
 django_settings_module = "hope_dedup_engine.config.settings"
-
-[tool.pdm]
-distribution = true
-
-[tool.pdm.dev-dependencies]
-dev = [
-    "django>=3",
-    "pytest>=8.2.2",
-    "django-factory-boy>=1.0.0",
-    "black>=24.4.2",
-    "flake8>=7.1.0",
-    "flake8-html>=0.4.3",
-    "isort>=5.13.2",
-    "pre-commit>=3.7.1",
-    "freezegun>=1.5.1",
-    "mypy>=1.10.1",
-    "pdbpp>=0.10.3",
-    "pytest-django>=4.8.0",
-    "pytest-cov>=5.0.0",
-    "django-webtest>=1.9.11",
-    "responses>=0.25.3",
-    "django-csp>=3.8",
-    "bandit>=1.7.9",
-    "tox>=4.16.0",
-    "pdm-bump>=0.9.0",
-]
-
-[tool.pdm.scripts]
-coverage = "pytest tests/ --cov -n auto --create-db -c pytest.ini"
-act = "act"
