--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = d{32,42,50}
+envlist = d{42,51}
 envtmpdir={toxinidir}/build/{envname}/tmp
 envlogdir={toxinidir}/build/{envname}/log
 
@@ -18,32 +18,31 @@ passenv =
 setenv =
     PYTHONDONTWRITEBYTECODE=true
     PYTHONPATH={toxinidir}/src
+    d42: DJANGO = django>=4,<5
+    d51: DJANGO = django>=5,<6
+    d42: LOCK = "uv4.lock"
+    d51: LOCK = "uv5.lock"
+
 extras =
     test
+
 deps =
-     d32: django==3.2.*
-     d42: django==4.2.*
-     d50: django==5.0.*
+    uv
 
 allowlist_externals =
-    flake8
-    isort
-    black
-    mkdir
-    pytest
+    sh
 
 commands =
-        mkdir -p {toxinidir}/~build/flake {toxinidir}/build/results
-        flake8 src/ tests/ --format=html --htmldir=~build/flake
-        isort src/ tests/ --check-only
-        black --check src/ tests/
-        pytest tests \
+;        mkdir -p {toxinidir}/~build/flake {toxinidir}/build/results
+;        flake8 src/ tests/ --format=html --htmldir=~build/flake
+;        isort src/ tests/ --check-only
+;        black --check src/ tests/
+    sh -c "echo '{env:DJANGO}' > {work_dir}/overrides.txt"
+    uv export -q --no-hashes  -o {work_dir}/requirements.txt
+    uv pip install -r {work_dir}/requirements.txt --override {work_dir}/overrides.txt
+    pytest tests \
             -q \
-            --create-db \
-            --cov-report=html \
-            --cov-report=term \
-            --cov-config={toxinidir}/tests/.coveragerc \
-            --cov=hope_dedup_engine
+            --create-db
 
 [testenv:report]
 commands =
