--- a/tox.ini
+++ b/tox.ini
@@ -5,15 +5,15 @@ envlogdir={toxinidir}/build/{envname}/log
 
 [testenv]
 basepython=python3.11
+skip_install = true
 passenv =
     PYTHONDONTWRITEBYTECODE
     USER
     PYTHONPATH
     DATABASE_URL
     DATABASE_HOPE_URL
-    SECRET_KEY
-    AZURE_CLIENT_ID
-    AZURE_CLIENT_SECRET
+deps =
+    uv
 
 setenv =
     PYTHONDONTWRITEBYTECODE=true
@@ -23,28 +23,33 @@ setenv =
     d42: LOCK = "uv4.lock"
     d51: LOCK = "uv5.lock"
 
-extras =
-    test
-
-deps =
-    uv
-
-allowlist_externals =
-    sh
-
 commands =
-;        mkdir -p {toxinidir}/~build/flake {toxinidir}/build/results
-;        flake8 src/ tests/ --format=html --htmldir=~build/flake
-;        isort src/ tests/ --check-only
-;        black --check src/ tests/
-    sh -c "echo '{env:DJANGO}' > {work_dir}/overrides.txt"
     uv export -q --no-hashes  -o {work_dir}/requirements.txt
-    uv pip install -r {work_dir}/requirements.txt --override {work_dir}/overrides.txt
-    pytest tests \
-            -q \
-            --create-db
+    pip install -r {work_dir}/requirements.txt
+    pip install '{env:DJANGO}'
+    pytest
+
+
 
 [testenv:report]
 commands =
     pip install coverage
     coverage html
+
+
+[testenv:package]
+skip_install = true
+
+deps=
+    build
+    twine
+
+
+setenv =
+    TWINE_USERNAME = {env:TWINE_TEST_USERNAME:__token__}
+    TWINE_PASSWORD = {env:TWINE_TEST_PASSWORD}
+
+commands =
+    python -c "import shutil; shutil.rmtree('{toxinidir}/dist', ignore_errors=True)"
+    python -m build --outdir {toxinidir}/dist
+    pip install hope-flex-fields --use-pep517 --no-deps --no-cache-dir --find-links file://{toxinidir}/dist/
