--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -85,7 +85,7 @@ jobs:
           uv export -q --no-hashes  -o {work_dir}/requirements.txt
           pip install -r {work_dir}/requirements.txt
           pip install '{env:DJANGO}'
-          pytest
+          pytest tests --create-db --cov --junit-xml junit-${{ matrix.python-version }}-${{matrix.django-version}}.xml
 
       - name: Cache venv
         if: steps.cache-venv-restore.outputs.cache-hit != 'true'
