--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -102,11 +102,11 @@ jobs:
         with:
           name: pytest-results-${{ matrix.python-version }}-${{matrix.django-version}}
           path: junit-${{ matrix.python-version }}-${{matrix.django-version}}.xml
-        if: ${{ always() }}
+        if: matrix.python-version == 3.12
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
-        if: ${{ always() }}
+        if: matrix.python-version == 3.12
         continue-on-error: true
         with:
           env_vars: OS,PYTHON
