--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -80,7 +80,7 @@ jobs:
           python:  ${{ matrix.python-version }}
 
       - name: Test
-        continue-on-error: true
+        continue-on-error: false
         run: |
           uv export -q --no-hashes  -o requirements.txt
           pip install -r requirements.txt
