--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -71,7 +71,6 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: |
-            .cache-uv/
             .venv/
           key: ${{ matrix.python-version }}-${{matrix.django-version}}-${{ hashFiles('pyproject.toml') }}-venv
 
@@ -82,10 +81,11 @@ jobs:
       - name: Test
         continue-on-error: false
         run: |
+          python3 -m venv .venv
           uv export -q --no-hashes  -o requirements.txt
-          pip install -r requirements.txt
-          pip install django==${{matrix.django-version}}
-          pytest tests --create-db --cov --junit-xml junit-${{ matrix.python-version }}-${{matrix.django-version}}.xml
+          .venv/bin/pip install -r requirements.txt
+          .venv/bin/pip install django==${{matrix.django-version}}
+          .venv/bin/pytest tests --create-db --cov --junit-xml junit-${{ matrix.python-version }}-${{matrix.django-version}}.xml
 
       - name: Cache venv
         if: steps.cache-venv-restore.outputs.cache-hit != 'true'
@@ -93,7 +93,6 @@ jobs:
         uses: actions/cache/save@v4
         with:
           path: |
-            .cache-uv/
             .venv/
           key: ${{ matrix.python-version }}-${{matrix.django-version}}-${{ hashFiles('pyproject.toml') }}-venv
 
