--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -75,8 +75,7 @@ jobs:
           key: ${{ matrix.python-version }}-${{matrix.django-version}}-${{ hashFiles('pyproject.toml') }}-venv
 
       - uses: yezz123/setup-uv@v4
-        with:
-          python:  ${{ matrix.python-version }}
+
 
       - name: Test
         continue-on-error: false
@@ -84,7 +83,7 @@ jobs:
           python3 -m venv .venv
           uv export -q --no-hashes  -o requirements.txt
           .venv/bin/pip install -r requirements.txt
-          .venv/bin/pip install django==${{matrix.django-version}}
+          .venv/bin/pip install "django>=${{matrix.django-version}}"
           .venv/bin/pytest tests --create-db --cov --junit-xml junit-${{ matrix.python-version }}-${{matrix.django-version}}.xml
 
       - name: Cache venv
