--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ dev-dependencies = [
     "pytest-django>=4.8.0",
     "pytest>=8.2.2",
     "responses>=0.25.3",
+    "pytest-xdist>=3.6.1",
     "tox>=4.16.0",
 ]
 
