--- a/.github/file-filters.yml
+++ b/.github/file-filters.yml
@@ -1,6 +1,6 @@
 # This is used by the action https://github.com/dorny/paths-filter
 dependencies: &dependencies
-  - 'pdm.lock'
+  - 'uv.lock'
   - 'pyproject.toml'
 
 python: &python
