--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,8 +20,8 @@ jobs:
 
       - name: Build release distributions
         run: |
-          python -m pip install pdm
-          pdm build
+          python -m pip install uv
+          uv build
 
       - name: Upload distributions
         uses: actions/upload-artifact@v4
