--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/checkout@v4.1.7
       - id: changes
         name: Check for file changes
-        uses: dorny/paths-filter@0bc4621a3135347011ad047f9ecf449bf72ce2bd # v3.0.0
+        uses: dorny/paths-filter@v3.0.0
         with:
           base: ${{ github.ref }}
           token: ${{ github.token }}
@@ -50,8 +50,8 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        python-version: [ "3.11", "3.12" ]
-        django-version: [ "4.2", "5.1" ]
+        python-version: [ "3.11", "3.12", "3.13" ]
+        django-version: [ "4.2", "5.2" ]
       fail-fast: true
     needs: [ changes ]
     if: needs.changes.outputs.run_tests
@@ -100,11 +100,11 @@ jobs:
         with:
           name: pytest-results-${{ matrix.python-version }}-${{matrix.django-version}}
           path: junit-${{ matrix.python-version }}-${{matrix.django-version}}.xml
-        if: matrix.python-version == 3.12
+        if: matrix.python-version == 3.13
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
-        if: matrix.python-version == 3.12
+        if: matrix.python-version == 3.13
         continue-on-error: true
         with:
           env_vars: OS,PYTHON
