--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,68 +1,63 @@
 name: Lint
-
 on:
   push:
     branches:
-      - '**'        # matches every branch
-
-concurrency:
-  group: "${{ github.workflow }}-${{ github.ref }}-lint"
-  cancel-in-progress: true
+      - develop
+      - master
+      - staging
+      - release/*
+      - feature/*
+      - bugfix/*
+      - hotfix/*
 
 defaults:
   run:
     shell: bash
 
-permissions:
-  id-token: write
-  attestations: write
 
+concurrency:
+  group: "${{ github.workflow }}-${{ github.ref }}"
+  cancel-in-progress: true
+
+
+permissions:
+  contents: read
 
 jobs:
   changes:
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name
+    name: check files
     runs-on: ubuntu-latest
-    timeout-minutes: 1
-    defaults:
-      run:
-        shell: bash
+    timeout-minutes: 3
     outputs:
-      lint: ${{steps.changes.outputs.lint }}
+      lint: ${{ steps.changes.outputs.lint }}
+      docker: ${{ steps.changes.outputs.docker_base }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - run: git config --global --add safe.directory $(realpath .)
+      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
       - id: changes
-        name: Check for file changes
-        uses: dorny/paths-filter@v3
+        name: Check for backend file changes
+        uses: dorny/paths-filter@0bc4621a3135347011ad047f9ecf449bf72ce2bd # v3.0.0
         with:
           base: ${{ github.ref }}
           token: ${{ github.token }}
           filters: .github/file-filters.yml
-
-  lint:
+  ruff:
+    needs: changes
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
-    needs: [ changes ]
-    if: needs.changes.outputs.lint
+    if: github.event.pull_request.draft == false && needs.changes.outputs.lint
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: 3.13
-          architecture: 'x64'
-      - uses: yezz123/setup-uv@v4.1
+          python-version: '3.12'
 
-      - name: Install deps
-        run: uv sync --group dev
+      - name: Install requirements
+        run: pip install ruff==0.9.3
 
-      - name: lint
-        if: needs.changes.outputs.lint
-        run: uv run tox -e lint
+      - name: Check syntax
+        # Stop the build if there are Python syntax errors or undefined names
+        run: ruff check --output-format concise src/
 
-      - name: pkg_meta
-        if: needs.changes.outputs.lint
-        run: uv run tox -e pkg_meta
+      - name: Warnings
+        run: ruff format --check
